fixec last image overflowing

--- a/styles.css
+++ b/styles.css
@@ -392,6 +392,11 @@ footer {
         width: 100%;
     
     }
+
+    #inventory-img  {
+        width: 200px;
+        height: 200px;
+    }
   
 }
 
